--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,14 @@
     <link href='https://fonts.googleapis.com/css?family=Lexend Deca' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/6d5a2b62db.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0ZD2HTEZQK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-0ZD2HTEZQK');
+    </script>
   </head>
   <body>
     <div id="root"></div>
